Prepare to build a new Vitis image with the bug fixes.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,6 +48,6 @@ stages:
 include:
 #    - local: '/ubuntu/vivado/2019.1/vnc/.gitlab-ci.yml'
 #    - local: '/sl/vivado/2018.2/x11/.gitlab-ci.yml'
-    - local: '/sl/vivado/2019.1/x11/.gitlab-ci.yml'
+#    - local: '/sl/vivado/2019.1/x11/.gitlab-ci.yml'
 #    - local: '/sl/vivado/2019.2/x11/.gitlab-ci.yml'
-#    - local: '/sl/vitis/2019.2/x11/.gitlab-ci.yml'
+    - local: '/sl/vitis/2019.2/x11/.gitlab-ci.yml'
