--- a/centos/7.4.1708/vivado/2019.2/x11/.gitlab-ci.yml
+++ b/centos/7.4.1708/vivado/2019.2/x11/.gitlab-ci.yml
@@ -1,26 +1,22 @@
-build_sl_vitis2020-1_x11:
+build_centos7-4-1708_vivado2019-2_x11:
     extends: .job_template
-    tags:
-        - cu-lnxfarm327-docker-privileged-xl
     variables:
-        OS: sl
-        OS_VERSION: "7"
-        SERIES: "vitis"
-        VERSION: "2020.1"
+        OS: centos
+        OS_VERSION: "7.4.1708"
+        SERIES: "vivado"
+        VERSION: "2019.2"
         VIEW: x11
 
-build_sl_vitis2020-1_x11_dockerhub:
+build_centos7-4-1708_vivado2019-2_x11_dockerhub:
     extends: .job_template
-    tags:
-        - cu-lnxfarm327-docker-privileged-xl
     variables:
         CI_REGISTRY: https://index.docker.io/v1/
         CI_REGISTRY_USER: ${DOCKER_USERNAME}
         CI_REGISTRY_PASSWORD: ${DOCKER_PASSWORD}
         CI_REGISTRY_IMAGE:  index.docker.io/aperloff
-        OS: sl
-        OS_VERSION: "7"
-        SERIES: "vitis"
+        OS: centos
+        OS_VERSION: "7.4.1708"
+        SERIES: "vivado"
         TO: "${CI_REGISTRY_IMAGE}/vivado-docker:${OS}${OS_VERSION}_${SERIES}${VERSION}_${VIEW}"
-        VERSION: "2020.1"
+        VERSION: "2019.2"
         VIEW: x11
